2017.9/_sources/plugins/available/longitudinal/pairwise-distances.txt
pairwise-distances: Paired pairwise distance testing and boxplots
=================================================================

.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime longitudinal pairwise-distances [OPTIONS]

     Performs pairwise distance testing between sample pairs from each subject.
     Sample pairs may represent a typical intervention study, e.g., samples
     collected pre- and post-treatment; paired samples from two different
     timepoints (e.g., in a longitudinal study design), or identical samples
     receiving different two different treatments. This action tests whether
     the pairwise distance between each subject pair differs between groups
     (e.g., groups of subjects receiving different treatments) and produces
     boxplots of paired distance distributions for each group.

   Options:
     --i-distance-matrix PATH        Artifact: DistanceMatrix  [required]
                                     Matrix
                                     of distances between pairs of samples.
     --m-metadata-file PATH          Metadata file or artifact viewable as
                                     metadata. This option may be supplied
                                     multiple times to merge metadata  [required]
                                     Sample metadata containing group_column,
                                     state_column, individual_id_column, and
                                     optionally metric values.
     --p-group-column TEXT           [required]
                                     Metadata column on which to
                                     separate groups for comparison
     --p-state-column TEXT           [required]
                                     Metadata column containing state
                                     (e.g., Time) across which samples are
                                     paired.
     --p-state-1 TEXT                [required]
                                     Baseline state column value.
     --p-state-2 TEXT                [required]
                                     State column value to pair with
                                     baseline.
     --p-individual-id-column TEXT   [required]
                                     Metadata column containing
                                     subject IDs to use for pairing samples.
                                     WARNING: if replicates exist for an
                                     individual ID at either state_1 or state_2,
                                     that subject will be dropped and reported in
                                     standard output by default. Set
                                     replicate_handling="random" to instead
                                     randomly select one member.
     --p-parametric / --p-no-parametric
                                     [default: False]
                                     Perform parametric (ANOVA
                                     and t-tests) or non-parametric (Kruskal-
                                     Wallis, Wilcoxon, and Mann-Whitney U tests)
                                     statistical tests.
     --p-palette [Pastel2|tab10|Dark2|tab20|tab20c|Accent|viridis|plasma|terrain|inferno|magma|Pastel1|Set2|Paired|tab20b|rainbow|Set3|Set1]
                                     [default: Set1]
                                     Color palette to use for
                                     generating boxplots.
     --p-replicate-handling [random|error|drop]
                                     [default: error]
                                     Choose how replicate
                                     samples are handled. If replicates are
                                     detected, "error" causes method to fail;
                                     "drop" will discard all subject IDs with
                                     replicate samples at either state_1 or
                                     state_2; "random" chooses one representative
                                     at random from among replicates.
     --o-visualization PATH          Visualization [required if not passing
                                     --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>Paired pairwise distance testing and boxplots

   Performs pairwise distance testing between sample pairs from each subject.
   Sample pairs may represent a typical intervention study, e.g., samples
   collected pre- and post-treatment; paired samples from two different
   timepoints (e.g., in a longitudinal study design), or identical samples
   receiving different two different treatments. This action tests whether the
   pairwise distance between each subject pair differs between groups (e.g.,
   groups of subjects receiving different treatments) and produces boxplots of
   paired distance distributions for each group.

   Parameters
   ----------
   distance_matrix : DistanceMatrix
       Matrix of distances between pairs of samples.
   metadata : Metadata
       Sample metadata containing group_column,  state_column,
       individual_id_column, and optionally metric values.
   group_column : Str
       Metadata column on which to separate groups for comparison
   state_column : Str
       Metadata column containing state (e.g., Time) across which samples are
       paired.
   state_1 : Str
       Baseline state column value.
   state_2 : Str
       State column value to pair with baseline.
   individual_id_column : Str
       Metadata column containing subject IDs to use for pairing samples.
       WARNING: if replicates exist for an individual ID at either state_1 or
       state_2, that subject will be dropped and reported in standard output
       by default. Set replicate_handling="random" to instead randomly select
       one member.
   parametric : Bool, optional
       Perform parametric (ANOVA and t-tests) or non-parametric (Kruskal-
       Wallis, Wilcoxon, and Mann-Whitney U tests) statistical tests.
   palette : Str % Choices({'Accent', 'Dark2', 'Paired', 'Pastel1', 'Pastel2', 'Set1', 'Set2', 'Set3', 'inferno', 'magma', 'plasma', 'rainbow', 'tab10', 'tab20', 'tab20b', 'tab20c', 'terrain', 'viridis'}), optional
       Color palette to use for generating boxplots.
   replicate_handling : Str % Choices({'drop', 'error', 'random'}), optional
       Choose how replicate samples are handled. If replicates are detected,
       "error" causes method to fail; "drop" will discard all subject IDs with
       replicate samples at either state_1 or state_2; "random" chooses one
       representative at random from among replicates.

   Returns
   -------
   visualization : Visualization</pre>
       </div>
     </div>
   </div>